--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.mybatis.generator</groupId>
-    <artifactId>mybatisGenerator</artifactId>
-    <version>1.3.2</version>
+
+    <parent>
+        <groupId>org.mybatis.generator</groupId>
+        <artifactId>mybatisGenerator</artifactId>
+        <version>1.3.2</version>
+    </parent>
+
+    <artifactId>mybatis-generator-core</artifactId>
     <packaging>jar</packaging>
-    <name>mybatisGenerator</name>
+    <name>MyBatis Generator Core</name>
 
     <dependencies>
         <dependency>
