--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>org.mybatis.generator</groupId>
-        <artifactId>mybatisGenerator</artifactId>
-        <version>1.3.2</version>
-    </parent>
-
-    <artifactId>mybatis-generator-core</artifactId>
+    <groupId>org.mybatis.generator</groupId>
+    <artifactId>mybatisGenerator</artifactId>
+    <version>1.3.2</version>
     <packaging>jar</packaging>
-    <name>MyBatis Generator Core</name>
+    <name>mybatisGenerator</name>
 
     <dependencies>
         <dependency>
