--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mybatis.generator</groupId>
-    <artifactId>mybatisGenerator</artifactId>
+    <artifactId>mybatis-generator-core-oracle</artifactId>
     <version>1.3.2</version>
     <packaging>jar</packaging>
-    <name>mybatisGenerator</name>
+    <name>mybatis-generator-core-oracle</name>
 
     <dependencies>
         <dependency>
