--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /.idea/
 /mybatisGenerator.iml
-/target/
+/target/archive-tmp/
+/target/classes/
+/target/generated-sources/
+/target/maven-archiver/
+/target/maven-status
