--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 /.idea/
 /mybatisGenerator.iml
-/target/archive-tmp/
-/target/classes/
-/target/generated-sources/
-/target/maven-archiver/
-/target/maven-status
+/target/
